@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.103 2010-02-03 09:10:01 mb Exp $
+# $Id: CHANGES,v 1.993.2.104 2010-02-03 13:09:06 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.7 (2010/??/??)
+ - (2010/02/03) Fixed bug#4937 - Accounted time per article is not displayed
+    in PDF print.
  - (2010/02/03) Fixed bug#4848 - Issue with TicketOverView object - does not
     show all tickets when moving through list.
  - (2010/02/02) Fixed issue with migrating Customer Queue notifications to
